--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Home</title>
 </head>
 <body>
-    Portifolio
+    <h1>Treinos</h1>
     <ul>
         <li><a href="3dmenu">Menu em 3d -> CSS + HTML</a></li>
-        
+        <li><a href="clock">Relogio HTML+CSS+JS</a></li>
     </ul>
 </body>
 </html>
