✨ feat(Site Resposivo): Finalizado
Adicionei section com doguinho
Botão voltar no cutoutmenu
botão voltar no RELP

--- a/cutoutmenu/index.html
+++ b/cutoutmenu/index.html
@@ -37,10 +37,13 @@
                     <div class="label">Settings</div>
                 </li>
                 <li>
-                    <span class="material-symbols-outlined">
-                        undo
-                    </span>
-                    <div class="label">Voltar</div>
+                    <a href="..">
+                       <span class="material-symbols-outlined">
+                            undo
+                        </span>
+                        <div class="label">Voltar</div> 
+                    </a>
+                    
                 </li>
                 <div class="marker"></div>
             </ul>
