--- a/relp/index.html
+++ b/relp/index.html
@@ -74,6 +74,15 @@
         </div>
     </section>
 
+    <section class="text">
+        <div class="text">
+            <h1>Lorem ipsum dolor</h1>
+            <p>sit amet consectetur adipisicing elit. Unde eos ea, quia, officiis dolorem nam autem quidem aspernatur aut officia dignissimos debitis. Laborum vel quidem fugit voluptatem quam repudiandae officia!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, numquam provident. Soluta deleniti accusantium temporibus nobis, cupiditate quos, ad reprehenderit harum qui vel placeat, voluptatibus sapiente dicta id voluptas? Iure!</p>
+        </div>
+    </section>
+
     <script src="index.js"></script>
 </body>
 </html>
