--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Treinos</h1>
-    <ul>
-        <li><a href="3dmenu">Menu em 3d -> CSS + HTML</a></li>
-        <li><a href="clock">Relogio HTML+CSS+JS</a></li>
-        <li><a href="cutoutmenu">Cutout Menu</a></li>
-        <li><a href="relp">Responsive Landing Page</a></li>
-    </ul>
+    <div class="card">
+       <h1>Treinos</h1>
+        <ul>
+            <li><a href="3dmenu">Menu em 3d -> CSS + HTML</a></li>
+            <li><a href="clock">Relogio HTML+CSS+JS</a></li>
+            <li><a href="cutoutmenu">Cutout Menu</a></li>
+            <li><a href="relp">Responsive Landing Page</a></li>
+        </ul> 
+    </div>
+    
 </body>
 </html>
