--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="clock">Relogio HTML+CSS+JS</a></li>
             <li><a href="cutoutmenu">Cutout Menu</a></li>
             <li><a href="relp">Responsive Landing Page</a></li>
-            <li><a href="pwaApp/dist/pwa-app">PWA App</a></li>
+            <li><a href="pwaApp/site">PWA App</a></li>
         </ul> 
     </div>
     
