--- a/pwaApp/site/index.html
+++ b/pwaApp/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>PwaApp</title>
-  <base href="/pwaApp">
+  <base href="/training/pwaApp/site/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
